
Project : Investors Simulation

- [16-02-2017] Project initialize
- [16-02-2017] [1.0] Add Bond and Stock class
- [17-02-2017] [1.1] Add Stock class
- [22-02-2017] [1.2] Update of Bond class + CompoundedInterest() + BondMain file
- [22-02-2017] [1.21] Draw plot for a bond
- [22-02-2017] [1.22] Draw plot for a stock
- [23-02-2017] [1.3] Update the class Bond, Stock and Investor + Draw better graph for bonds and stocks
- [23-02-2017] [1.31] Update the investor class + draw 3 types of investors
- [25-02-2017] [1.4] Generate the modelling for 10 defensive, aggressive and mixed investors (not 1000 for the moment)