@@ -2,6 +2,7 @@ import matplotlib.pyplot as plt
 import matplotlib
 import pandas as pd
 import numpy as np
+import datetime
 
 ####################################
 #           Bond Class             #
@@ -12,6 +13,7 @@ import numpy as np
 #@Updates:  - [18-02-2017]: Added profit attribute to classes ShortTerm and LongTerm
 #           - [22-02-2017]: Attributes updates + add compoundedInterest() + Draw a plot for a bond
 #           - [23-02-2017]: Add function getMinAmount() + whoIAm()
+#           - [25-02-2017]: Use of dataframe instead of list
 #TODO: - Check the minimum Amount and Term
 #      - Implement new method with only profit
 
@@ -63,21 +65,31 @@ class Bond(object):
         return str(date[0] + '-' + date[1].zfill(2) + '-' + date[2].zfill(2))
 
     def interestSeriesComplete(self):
-        seriesI = [[],[]]
+        Dates = []
+        Interest = []
         date = str.split(self._start_date, '/')
-        first_date = date[2] + '-' + date[1] + '-' + date[0]
+        tmp_date = date[2] + '-' + date[1] + '-' + date[0]
+        first_date = datetime.datetime(int(date[2]),int(date[1]),int(date[0]))
 
-        seriesI[0].append(first_date)
-        seriesI[1].append(self.coumpoundedInterest(0))
+        Dates.append(first_date)
+        Interest.append(self.coumpoundedInterest(0))
+
         nbMM = 12 * self._term
-        currentDate = first_date
+        currentDate = tmp_date
 
         for i in range(1,nbMM):
             currentDate = self.addOneMonth(currentDate)
-            seriesI[0].append(currentDate)
-            seriesI[1].append(self.coumpoundedInterest(i, (1/12)))
+            #seriesI[0].append(currentDate)
+            #seriesI[1].append(self.coumpoundedInterest(i, (1/12)))
+            date = str.split(currentDate, '-')
+            Dates.append(datetime.datetime(int(date[0]),int(date[1]),int(date[2])))
+            Interest.append(self.coumpoundedInterest(i, (1/12)))
+
+        seriesI = pd.DataFrame(data= Interest, columns=['Interest'], index=Dates)
 
         return seriesI
+
+
 
     def interestSeriesByTime(self, Period):
         seriesI = []
